# exa-direct

./: .env.example  .gitignore  .markdownlint.yaml  .markdownlintignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  markdownlint.yml  ruff.yml
docs/: index.md  prd.md
docs/developers/: architecture.md  contributing.md  exa_py_api_reference.md  reviews.md  testing.md
docs/developers/adr/: ADR-0001.md  ADR-0002.md  ADR-0003.md  ADR-0004.md  ADR-0005.md  ADR-0006.md  ADR-0007.md  ADR-0008.md  ADR-0009.md  ADR-0010.md  ADR-0011-http-client.md  ADR-0012-final-sdk-surface.md  ADR-0013-typed-jsonlines-streaming.md  ADR-0014-contents-vs-crawl-scrape.md
docs/user/: best_practices.md  commands.md  quickstart.md
docs/users/: best_practices.md  commands.md  quickstart.md  recipes.md  troubleshooting.md
examples/: agents_node.ts  agents_python.py  answer_examples.sh  contents_examples.sh  context_example.sh  context_rag_snippet.py  find_similar_examples.sh  pipeline_search_contents_answer.py  research_examples.sh  research_instructions.md  research_schema.json  research_stream_json.py  search_examples.sh  stream_consumer.sh
scripts/: exa.sh
scripts/git-hooks/: pre-commit
src/exa_direct/: __init__.py  cli.py  client.py  printing.py
tests/: conftest.py  httpx.py  requests.py  test_cli.py  test_client_research.py  test_research_cli.py
tests/e2e/: test_examples_metadata.py
tests/exa_py/: __init__.py
tests/integration/: test_cli.py  test_research_cli.py
tests/unit/: test_answer_options.py  test_client_research.py  test_client_search_contents.py  test_context_backoff.py
